--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhostalura_series
+spring.datasource.url=jdbc:postgresql://localhost/alura_series
 spring.datasource.username=postgres
 spring.datasource.password=41428630
 spring.datasoucer.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
